Corrected overflow-x for <pre> in github.io page on mobile

--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ pre
 {
 	padding: 1em;
 	line-height: 1.2em;
+	overflow-x: scroll;
 }
 
 main
